# oslo-incubator

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  HACKING.rst  LICENSE  MAINTAINERS  MANIFEST.in  README  README.rst  TESTING  TESTING.rst  groups  new_commits  obsolete.txt  openstack-common.conf  patch  pep8-requirements.txt  project.config  requirements-py3.txt  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  tox.ini  update.py  update.sh
common/: exception.py
common/middleware/: context.py
dashboards/: documentation.dash  graduation.dash  main.dash  syncs.dash
doc/source/: conf.py  index.rst
etc/: openstack-common.conf.test  openstack.conf.sample  skeleton-api.conf
etc/oslo/: rootwrap.conf  routing_notifier.yaml.sample
openstack/: __init__.py
openstack/common/: .gettextutils.py.swo  .test.py.swo  __init__.py  _i18n.py  abcutils.py  api_validator.py  authutils.py  base64utils.py  bufferedhttp.py  cfg.py  cfgfilter.py  cliutils.py  compat.py  concurrency.py  config.py  config_generator.py  context.py  correlation_id.py  crypto.py  cryptoutils.py  deprecated.py  eventlet_backdoor.py  exception.py  excutils.py  executor.py  fileutils.py  filter.py  first.py  funcutils.py  gettextutils.py  hooks.py  imageutils.py  importutils.py  iniparser.py  install_venv.py  jsonutils.py  lazygettextutils.py  loadables.py  local.py  lockutils.py  (+41 more)
openstack/common/apiclient/: auth.py  auth_plugin.py  base.py  client.py  client_set.py  exceptions.py  fake_client.py  keyring_saver.py  secrets_helper.py  utils.py
openstack/common/block_storage/: lvm.py
openstack/common/cache/: __init__.py  backends.py  cache.py  core.py  decorators.py  exceptions.py  memoization.py
openstack/common/cmd/: __init__.py  rpc_zmq_receiver.py
openstack/common/config/: generator.py
openstack/common/crypto/: utils.py
openstack/common/db/: __init__.py  api.py  base.py  common.py  exception.py  options.py
openstack/common/deprecated/: __init__.py  wsgi.py
openstack/common/filters/: __init__.py  availability_zone_filter.py  capabilities_filter.py  json_filter.py
openstack/common/fixture/: config.py  (+5 more)
openstack/hacking/: checks.py
openstack/paste/: __init__.py  commands.py
oslo/report/: guru_meditation_report.py  report.py
pypi/: README  setup.py
pypi/oslo/: __init__.py
skeleton/: version.py
tests/: __init__.py  provision.py  utils.py
tests/testmods/: baar_baa_opt.py  bar_foo_opt.py  baz_qux_opt.py  blaa_opt.py  fbar_foo_opt.py  fblaa_opt.py  i18n_opt.py  unicode_opt.py
tests/unit/: eventlet_service.py  extension_stubs.py  fakes.py  test_abcutils.py  test_api_validator.py  test_authutils.py  test_base.py  test_base64utils.py  test_basetestcase.py  test_bufferedhttp.py  test_cfg.py  test_cfgfilter.py  test_cliutils.py  test_compat.py  test_concurrency.py  test_config.py  test_context.py  test_convertutils.py  test_correlation_id.py  test_crypto.py  test_cryptoutils.py  test_deprecated.py  test_eventlet_backdoor.py  test_exception.py  test_excutils.py  test_executils.py  test_extensions.py  test_fileutils.py  test_first.py  test_funcutils.py  test_gettext.py  test_hacking.py  test_healthcheck_middleware.py  test_hooks.py  test_host_filters.py  test_http_notifier.py  test_imageutils.py  test_importutils.py  test_iniparser.py  test_jsonutils.py  (+48 more)
tests/var/: policy.json
tools/: README.rst  abandon_old_reviews.sh  analyze-oslo.sh  apply_cookiecutter.sh  build_dashboards.sh  check_codestyle.py  check_common_conf.py  check_maintainers.py  clean_oslo_namespaces.sh  clone_openstack.sh  colorizer.py  debug_helper.sh  filter_git_history.sh  find_used_deleted_modules.py  flakes.py  gen_crypto_key.py  global-pip-requires  global-tests-requires  graduate.sh  hacking.py  highest_semver.py  install_venv.py  install_venv_common.py  lint.py  list_latest_releases.sh  list_oslo_projects.py  list_unreleased_changes.sh  make_review_links.py  new_core.py  new_core_analyzer.py  new_core_recruit.py  oslo_tool_config.py  patch_tox_venv.py  pip-requires  pre_release_tests.py  propose_unreleased_changes.py  release_notes.py  release_notes.sh  remove-namespace-packages-project.txt  requirements.txt  (+7 more)
tools/config/: README  check_uptodate.sh  generate_sample.sh
tools/imports/: reorder.py
(+283 files in other folders)
