[metadata]
name = openstack.common
version = 2013.2
summary = OpenStack Common Libraries
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    openstack
namespace_packages =
    openstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    oslo-rootwrap = openstack.common.rootwrap.cmd:main
    oslo-rpc-zmq-receiver = openstack.common.rpc.zmq_receiver:main

openstack.common.scheduler.filters =
    AvailabilityZoneFilter = openstack.common.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter
    CapabilitiesFilter = openstack.common.scheduler.filters.capabilities_filter:CapabilitiesFilter
    JsonFilter = openstack.common.scheduler.filters.json_filter:JsonFilter

openstack.common.tests.fakes.weights =
    FakeWeigher1 = tests.unit.fakes:FakeWeigher1
    FakeWeigher2 = tests.unit.fakes:FakeWeigher2

openstack.common.cache.backends =
    memory = openstack.common.cache._backends.memory:MemoryBackend

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
